# EnterpriseOps-Gym

./: .gitignore  CLAUDE.md  README.md  evaluate.py  extract_trajectories.py  knowledge_tool.py  my_doc.md  pyproject.toml  scan_results.py  system_prompt_knowledge_suffix.txt
benchmark/: executor.py  mcp_client.py
data/revised/csm/: task_20251205_153330_906_a8eea1c0_8c7a6205.json  task_20251205_154853_044_d4a463c3_fce76046.json  task_20251209_132736_542_99ba2325_6705caf4.json  task_20251210_002938_761_897c3e0b_f075229a.json  task_20251210_113549_827_d4a463c3_47b48a98.json  task_20251231_162628_797_a8eea1c0_0a53db6c.json  task_20260101_043715_660_a8eea1c0_7304e48e.json  task_20260101_122222_300_ad5a67e3_3757206c.json  task_20260102_155148_014_accab84d_910b176a.json  task_20260102_161510_799_ad5a67e3_7221f3c8.json  task_20260102_172945_725_ad5a67e3_5480e26f.json  task_20260104_202644_765_00364ece_a86667c0.json
data/revised/itsm/: task_20251212_172511_458_e6427839_47076c15.json
results_plain/react/gpt-5/csm/oracle/run_1/: results_oracle__csm__task_20251125_152842_063_b393a327_9622ac64.json  results_oracle__csm__task_20251126_182216_326_66392a82_d3ff64ca.json  results_oracle__csm__task_20251127_070938_325_b393a327_a40b1f4e.json  results_oracle__csm__task_20251127_152838_396_99ba2325_8391501f.json  results_oracle__csm__task_20251128_072831_616_6cd2e092_426f7c81.json  results_oracle__csm__task_20251128_204735_353_66392a82_3f8ef4a1.json  results_oracle__csm__task_20251201_164641_724_109c89c0_1b29acb9.json  (+85 more)
utils/: task_queue_worker.py
(+61 files in other folders)
