[project]
name = "EnterpriseOps-Gym"
version = "0.1.0"
description = "Benchmarking framework for evaluating LLMs on enterprise agentic tasks."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "ray>=2.53.0",
    "datasets>=4.5.0",
    "huggingface_hub>=1.3.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "fastmcp"
]

[project.optional-dependencies]
anthropic = [
    "langchain-anthropic>=0.1.0",
    "anthropic>=0.40.0",
    "langchain-aws>=0.1.0",   
    "boto3>=1.28.0",
]
openai = [
    "langchain-openai>=0.1.0",
    "openai>=1.0.0",
]
google = [
    "langchain-google-genai>=0.1.0",
    "langchain-google-vertexai>=1.0.0",
    "google-cloud-aiplatform>=1.40.0",
]
deepseek = [
    "langchain-deepseek>=0.1.0",
]
qwq = [
    "langchain-qwq>=0.1.0",
]
all = [
    "EnterpriseOps-Gym[anthropic,openai,google,deepseek,qwq]",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "ipython>=8.0.0",
    "matplotlib>=3.7.0",
]

[tool.uv]
package = false
